--- a/package.json
+++ b/package.json
@@ -1,23 +1,30 @@
 {
-  "name": "my-fitness-app",
+  "name": "fitness-tracker-app",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.1.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
+    "dev:client": "vite",
+    "build:client": "vite build",
+    "dev:server": "cd server && node src/index.js",
+    "dev": "concurrently \"npm run dev:client\" \"npm run dev:server\"",
     "lint": "eslint .",
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.6.7",
+    "chart.js": "^4.4.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^19.1.0",
+    "react-router-dom": "^6.21.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@vitejs/plugin-react": "^4.4.1",
+    "concurrently": "^8.2.2",
     "eslint": "^9.25.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
